cmake_minimum_required(VERSION 3.13)
project(Code)

set(CMAKE_CXX_STANDARD 11)

add_executable(Code main.cpp RunTest.h start1/StartDemo1.cpp start1/StartDemo1.h start1/StartDemo19.cpp start1/StartDemo19.h start1/Sales_item.cpp start1/Sales_item.h start1/StartDemo20.h demo2/Demo322.h demo2/Demo342.h houjie/StlTest.h demo6/Demo611.h StringTest.cpp)